2010-02-17
Made modules more compatible with loading by requiring modules to INIT the includes they need before they use them, instead of when the module is loaded
	This way a module's information can be loaded and read (later including descriptions) without worrying about the dependencies
Worked on install.php script
	Now more self contained and handles errors more elegantly
	Finished database installation
Changed sql.php to database.php
	Created wrapper functions for ADOdb throughout script
Adding optional callback to install() function in database.php
Modules should not include_once their own module dependencies
	All other includes should be place in an init() function and called when needed
Created more setup functions in common.php for handling the reading of modules and tables
Removed MIME functionality from common.php
	Now fully relies on PEAR_MIME
System is becoming more reliant of PEAR_ERROR and will support more advanced debugging soon

2010-02-16
Created nifty install.php script
	Completely self contained, prints out style, and images that it needs
Added ADOdb to the includes
	This will be used by a database.php include that acts as a wrapper for ADOdb

2010-02-14
Created tools.php in the admin section that makes the functionality from reports.php modular
	Made reports.php obsolete
Created a tools.php plain/template to handle basic output and provide examples on how to handle tools
Created statistics.php admin tool for displaying information about the current install
Created filetools.php admin tool for manipulating files the site has loaded

2010-02-10
Added RECURSIVE_GET to the Settings and db_file.php to allow for an option to turn on reading directories while the site is being used
Started converting Settings to fill in the definitions automatically, the install script should verify this information
Added a check to db_file.php module to make sure that it doesn't add directories that are ignored

2010-02-04