@@ -1,4 +1,6 @@
 <?php
+
+// at the bottom because it takes up a lot of room
 if(isset($_REQUEST['image']))
 {
 	print_image();
@@ -29,8 +31,8 @@ foreach($post as $key)
 {
 	if(isset($_REQUEST[$key]))
 	{
-		$_SESSION[$key] = $_REQUEST[$key];
-		$$key = $_REQUEST[$key];
+		$_SESSION[$key] = stripslashes($_REQUEST[$key]);
+		$$key = stripslashes($_REQUEST[$key]);
 	}
 	elseif(isset($_SESSION[$key]))
 	{
@@ -84,6 +86,7 @@ while(count($tmp_modules) > 0 && $error_count < 1000)
 
 $GLOBALS['modules'] = $new_modules;
 
+$post[] = 'HTML_NAME';
 $post[] = 'LOCAL_BASE';
 $post[] = 'LOCAL_DEFAULT';
 $post[] = 'LOCAL_TEMPLATE';
@@ -111,8 +114,8 @@ foreach($post as $key)
 	
 	if(isset($_REQUEST[$key]))
 	{
-		$_SESSION[$key] = $_REQUEST[$key];
-		$$key = $_REQUEST[$key];
+		$_SESSION[$key] = stripslashes($_REQUEST[$key]);
+		$$key = stripslashes($_REQUEST[$key]);
 	}
 	elseif(isset($_SESSION[$key]))
 	{
@@ -290,8 +293,7 @@ body {
 
 #container {
 	margin:auto;
-	max-width:900px;
-	width:100%;
+	width:900px;
 }
 
 #breadcrumb {
@@ -519,6 +521,52 @@ input.button {
 
 h2 {
 	font-size:12pt;
+}
+.hl-default {
+    color: Black;
+}
+.hl-code {
+    color: Gray;
+}
+.hl-brackets {
+    color: #0000CC;
+}
+.hl-comment {
+    color: Orange;
+}
+.hl-quotes {
+    color: #CC0000;
+}
+.hl-string {
+    color: #CC0000;
+}
+.hl-identifier {
+    color: Blue;
+}
+.hl-builtin {
+    color: Teal;
+}
+.hl-reserved {
+    color: Green;
+}
+.hl-inlinedoc {
+    color: Blue;
+}
+.hl-var {
+    color: Darkblue;
+}
+.hl-url {
+    color: Blue;
+}
+.hl-special {
+    color: Navy;
+}
+.hl-number {
+    color: Red;
+}
+.hl-inlinetags {
+    color: Red;
+	font-weight:bold;
 }
 </style>
 </head>
@@ -748,13 +796,13 @@ switch($_REQUEST['step'])
 	$count = 11 + count($GLOBALS['modules']);
 	break;
 	case 7:
-	$count = 11 + count($GLOBALS['modules']) + 3;
+	$count = 11 + count($GLOBALS['modules']) + 4;
 	break;
 	case 8:
-	$count = 11 + count($GLOBALS['modules']) + 5;
+	$count = 11 + count($GLOBALS['modules']) + 6;
 	break;
 	case 9:
-	$count = 11 + count($GLOBALS['modules']) + 12;
+	$count = 11 + count($GLOBALS['modules']) + 13;
 	break;
 }
 for($i = 0; $i < $count; $i++)
@@ -1281,6 +1329,21 @@ elseif($_REQUEST['step'] == 6)
 <table border="0" cellpadding="0" cellspacing="0">
 <?php
 
+// set site name
+if(!isset($HTML_NAME))
+	$HTML_NAME = 'Brian\'s Media Website';
+?><tr><td class="title">Site Name</td>
+<td>
+<input type="text" name="HTML_NAME" value="<?php echo $HTML_NAME; ?>" />
+</td>
+<td class="desc">
+<ul>
+	<li>Some templates can display a name for this media server.  Set this here.</li>
+</ul>
+</td></tr>
+<?php
+
+
 // check for base template
 if(!isset($LOCAL_BASE))
     $LOCAL_BASE = 'templates' . DIRECTORY_SEPARATOR . 'plain' . DIRECTORY_SEPARATOR;
@@ -1639,8 +1702,197 @@ $DB_SECRET = md5(microtime());
 
 $pass_changed = $DATABASE->installFirstTimeUsers($DB_SECRET);
 
+$DB_CONNECT = addslashes($DB_TYPE . '://' . $DB_USER . ':' . $DB_PASS . '@' . $DB_SERVER . '/' . $DB_NAME);
+
+$NO_TEMPLATE = ($LOCAL_TEMPLATE == '')?'#':'';
+
+// add slashes to all the variables used below
+foreach($post as $key)
+{
+	$$key = addslashes($$key);
+}
+	
+	$settings = <<<EOF
+
+// the most basic settings for getting the system running
+// all other settings are stored in the appropriate classes that handle each section
+
+// database connection constants
+define('USE_DATABASE', 	                  true); // set to false to make modules load information about every file on the fly
+
+define('DB_CONNECT',			'$DB_CONNECT');
+
+// this secrect key is prepended to all passwords before encryption
+//   this is so if someone access the database, they still must know the secret key before they can get the passwords
+//   this key should be very random
+define('DB_SECRET', 		'$DB_SECRET');
+
+// site constants these are used throughout the entire system
+define('LOCAL_ROOT',                '$LOCAL_ROOT');
+
+// where to put the user directory for storing user uploaded files
+//   this directory must be writtable by the web server
+define('LOCAL_USERS', 							'$LOCAL_USERS');
+
+// this template folder includes all the files in pages that are accessible
+//  this includes the types of list outputs so other templates don't have to reimplement them to use them
+define('LOCAL_BASE',            				        '$LOCAL_BASE');
+
+// this is the local filesystem path to the default template, this path should not be used in web pages, instead use HTML_TEMPLATE
+//  this is the template that is used when a template is not specified
+define('LOCAL_DEFAULT',            				        '$LOCAL_DEFAULT');
+
+// this is the optional template that will be used
+// if this is defined here, the user will not be given an option to choose a template
+$NO_TEMPLATE define('LOCAL_TEMPLATE',            					 '$LOCAL_TEMPLATE');
+
+// this is the path used by html pages to refer back to the website domain, HTML_ROOT is usually appended to this
+define('HTML_DOMAIN',            			    '$HTML_DOMAIN');
+
+// this is the root directory of the site, this is needed if the site is not running on it's own domain
+// this is so HTML pages can refer to the root of the site, without making the brower validate the entire domain, this saves time loading pages
+// a slash / is always preppended to this when the HTML_DOMAIN is not preceeding this
+define('HTML_ROOT',                                        '$HTML_ROOT');
+
+// extra constants
+// site name is used through various templates, generally a subtitle is appended to this
+define('HTML_NAME',			                                   '$HTML_NAME'); // name for the website
+
+// commands, these are used for converting media throughout the site
+// multiple definitions can be set with the extension in all caps for different file types
+//  for example CONVERT_JPG, and CONVERT_ARGS_JPG can be used for converting any file with the JPG extension
+//  if %IF is not found in the string the plugins and modules will assume STDIN is used, additional functionality will be enabled in this case
+//  same for %0F, STDOUT will be used and this will enable much faster response times
+
+// the arguments to use with encode are as follows
+/*
+%IF - Input file, the filename that will be inserted for transcoding
+%FM - Format to output
+%TH - Thumbnail height
+%TW - Thumbnail width
+%OF - Output file if necissary
+*/
+// More options can be added but you will have to do some scripting in the convert.php plugin
+define('CONVERT', 				   '$CONVERT'); // image magick's convert program
+define('CONVERT_ARGS', 			   '"%IF" -resize "%TWx%TH" %FM:-'); // image magick's convert program
+
+// the arguments to use with encode are as follows
+/*
+%IF - Input file, the filename that will be inserted for transcoding
+%VC - Video Codec to be used in the conversion
+%AC - Audio Codec
+%VB - Video Bitrate
+%AB - Audio Bitrate
+%SR - Sample Rate
+%SR - Scale
+%CH - Number of Channels
+%MX - Muxer to use for encapsulating the streams
+%TO - Time Offset for resumable listening and moving time position
+%FS - Frames per Second
+%OF - Output file if necissary
+*/
+// More options can be added but you will have to do some scripting in the encode.php plugin
+// remember ffmpeg uses generally the same codec names as the default vlc, however custom commands may be needed to convert to each type
+define('ENCODE', 				       '$ENCODE'); // a program that can convert video and audio streams
+define('ENCODE_ARGS',                  '-I dummy - --start-time=%TO :sout=\'#transcode{vcodec=%VC,acodec=%AC,vb=%VB,ab=%AB,samplerate=%SR,channels=%CH,audio-sync,scale=%SC,fps=%FS}:std{mux=%MX,access=file,dst=-}\' vlc://quit'); // a program that can convert video and audio streams
+
+// the arguments to use with archive are as follows
+/*
+%IF - Input file
+%OF - Output file if necessary
+*/
+define('ARCHIVE_RAR',                                'C:\Program Files\WinRAR\Rar.exe'); // a program that can convert video and audio streams
+define('ARCHIVE_ARGS_RAR',                           ' p %IF'); // a program that can convert video and audio streams
+
+// finally some general options, just used to avoid hardcoding stuff
+
+// debug mode is used by many templates to display debugging options on the page
+define('DEBUG_MODE', 							$DEBUG_MODE);
+
+// when a user tries to access a directory listing, this will load missing directories on the fly
+//   this is good when there are few files in a directory, but the site hasn't scanned them all
+//   don't use this when there are many complex files and the site has loaded thousands already
+define('RECURSIVE_GET', 				$RECURSIVE_GET);
+
+// this will redirect a google bot to the sitemap.php plugin or remove request options like search
+//   this is recommended because GoogleBots usually look for the wrong information and this will slow down the site A LOT
+define('NO_BOTS', 							$NO_BOTS);
+
+// max amount to output when accessing a file
+define('BUFFER_SIZE', 	                         $BUFFER_SIZE);
+
+// a temporary directory to use for creating thumbnails
+define('TMP_DIR', 	                             '$TMP_DIR');
+
+// set to true in order to use aliased paths for output of Filepath
+// USE_DATABASE must be enabled in order for this to be used!
+define('USE_ALIAS', 							 $USE_ALIAS);
+
+// how long to search for directories that have changed
+define('DIRECTORY_SEEK_TIME',		$DIRECTORY_SEEK_TIME);
+
+// how long to search for changed files or add new files
+define('FILE_SEEK_TIME', 		   $FILE_SEEK_TIME);
+
+// how long to clean up files
+define('CLEAN_UP_BUFFER_TIME',				45);
+
+// how many times should we be able to run the cron script before a cleanup is needed?
+//  cleanup will also be fired when a directory change is detected, this may not always be accurate
+define('CLEAN_UP_THREASHOLD', 				10);
+
+ini_set('include_path', '.:/usr/share/php:/usr/share/pear:' . LOCAL_ROOT . 'include/');
+
+// comment-out-able
+ini_set('error_reporting', E_ALL);
+
+EOF;
+
+if($pass_changed)
+{
+	?>
+    <table border="0" cellpadding="0" cellspacing="0">
+    <?php
+    
+    // save config
+    ?><tr><td class="title warn">New Secret</td>
+    <td>
+	<label>Default Password Updated</label>
+    </td>
+    <td class="desc">
+    <ul>
+        <li>WARNING: The secret key for the database changes every time this script is loaded.</li>
+        <li>The administrator password has been changed back to the default.</li>
+    </ul>
+    </td></tr>
+    </table>
+    <?php
+}
+else
+{
+	?>
+    <table border="0" cellpadding="0" cellspacing="0">
+    <?php
+    
+    // save config
+    ?><tr><td class="title warn">Admin Password</td>
+    <td>
+	<label>Default Password Updated</label>
+    </td>
+    <td class="desc">
+    <ul>
+        <li>WARNING: The Admin password has been reset to the default.  You should change this password to something more secure as soon as possible.</li>
+    </ul>
+    </td></tr>
+    </table>
+    <?php
+}
+
 if($fh !== false)
 {
+	fwrite($fh, $settings);
+	fclose($fh);
+	
 	?>
     <table border="0" cellpadding="0" cellspacing="0">
     <?php
@@ -1678,10 +1930,20 @@ else
     </ul>
     </td></tr>
     </table>
-	<textarea style="width:100%; height:400px;">
+	<div style="width:100%; height:400px; overflow:scroll; border:1px solid #999;">
     <code>
+    <?php
+	
+include_once $LOCAL_ROOT . 'include' . DIRECTORY_SEPARATOR . 'Text' . DIRECTORY_SEPARATOR . 'Highlighter.php';
+$highlighter = Text_Highlighter::factory('php');
+$settings = $highlighter->highlight('<?php
+' . $settings . '
+?>');
+
+print $settings;
+	?>
     </code>
-    </textarea>
+    </div>
 	<?php
 }
 
